--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 max-scale=1.0">
     <title>painel</title>
 </head>
 <style>
@@ -194,9 +194,6 @@ nav > ul > li:hover > a {
 
       
 <footer class="rodape">
-    <div>
-    <p>carlos lindo :P</p>
-    </div>
 </footer>
 </body>
 </html>
