--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@ p{
   margin-right: 20px;
   text-indent: 20px;
 }
+.imagem{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 </style>
 
@@ -189,6 +194,7 @@ p{
   formar outros tipos celulares é chamada de diferenciação celular e, principalmente na fase embrionária, esse processo é fundamental para a 
   formação de tecidos e órgãos. Ao longo da vida adulta do organismo, as poucas células-tronco que restam estão relacionadas com a renovação 
   celular.</p>
+<img src="oquesaocelulastronco.png" class="imagem">
 <a name="classificacao"><h1>Classificação das Células-Tronco</h1></a>
 <p>Já dissemos que a célula-tronco por excelência é o zigoto, porque ela é uma célula totipotente, isto é, capaz de formar tanto o embrião 
   (e, portanto, todo o organismo adulto) como também uma estrutura extraembrionária, a placenta.  O processo de clivagem (ou segmentação) do 
@@ -204,7 +210,7 @@ p{
   células pluripotentes para células multipotentes (isto é, capazes de dar origem a um número menor de células especializadas) e destas para 
   as células progenitoras (ou precursoras). As células progenitoras já não podem ser consideradas como células-tronco, pois ao se dividir não 
   produzem outras células progenitoras similares. Ao contrário, as células resultantes da divisão adquirem uma morfologia e fisiologia próprias,
-  especializando-se no desempenho de uma tarefa específica no organismo (células diferenciadas).</p>
+  especializando-se no desempenho de uma tarefa específica no organismo (células diferenciadas)</p>
 <a name="tipos"><h1>Tipos de Células-Tronco</h1></a>
 <p>
   <ol>
@@ -234,7 +240,7 @@ p{
 </p>
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO</p>
-<a name="conhecaogrupo"></a>
+<a name="conhecaogrupo"><h1>Conheça o Grupo</h1></a>
 <div class="item">
   <h3>Bruna Romeiro</h3>
   <img src="messi.jpg">
