--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ p{
   margin-left: 20px;
   margin-right: 20px;
   text-indent: 20px;
+  max-width: 100%;
+  max-height: 100%;
 }
 .imagem{
   display: block;
