--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@ p{
   células pluripotentes para células multipotentes (isto é, capazes de dar origem a um número menor de células especializadas) e destas para 
   as células progenitoras (ou precursoras). As células progenitoras já não podem ser consideradas como células-tronco, pois ao se dividir não 
   produzem outras células progenitoras similares. Ao contrário, as células resultantes da divisão adquirem uma morfologia e fisiologia próprias,
-  especializando-se no desempenho de uma tarefa específica no organismo (células diferenciadas)</p>
+  especializando-se no desempenho de uma tarefa específica no organismo (células diferenciadas).</p>
+  <img src="classificacaocelulastronco.jpg" class="imagem">
 <a name="tipos"><h1>Tipos de Células-Tronco</h1></a>
 <p>
   <ol>
