--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ p{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 90%;
+  max-height: 90%;
 }
 
 </style>
@@ -240,6 +240,7 @@ p{
        inserção de um vírus que modifica o DNA e reprograma a célula para que ela volte ao estágio de célula-tronco embrionária. Para isso, 
        geralmente são utilizadas células da pele.</p>
   </ol>
+  <img src="tiposcelulastronco.jpg" class="imagem">
 </p>
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO</p>
