--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@ p{
   max-width: 90%;
   max-height: 90%;
 }
+.grupo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
+  max-height: 50%;
+  text-align: center;
+}
 
 </style>
 
@@ -245,24 +253,24 @@ p{
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO</p>
 <a name="conhecaogrupo"><h1>Conheça o Grupo</h1></a>
-<div class="item">
+<div class="grupo">
   <h3>Bruna Romeiro</h3>
-  <img src="messi.jpg">
+  <img src="bruna.png">
 </div> <!-- /.item -->
 
-<div class="item">
+<div class="grupo">
   <h3>Carlos Antônio</h3>
   <img src="messi.jpg">
 </div> <!-- /.item -->
 
-<div class="item">
+<div class="grupo">
   <h3>Isaque Augusto</h3>
-  <img src="messi.jpg">
+  <img src="isaque.png">
 </div> <!-- /.item -->
 
-<div class="item">
+<div class="grupo">
   <h3>Leticcia Medeiros</h3>
-  <img src="messi.jpg">
+  <img src="leticcia.png">
 </div> <!-- /.item -->
 
 </div><!-- .container -->
