--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ p{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 50%;
-  max-height: 50%;
+  height: auto;
+  width: auto;
   text-align: center;
 }
 
