--- a/index.html
+++ b/index.html
@@ -149,13 +149,15 @@ p{
   max-width: 90%;
   max-height: 90%;
 }
+h3{
+  text-align: center;
+}
 .grupo{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  height: auto;
-  width: auto;
-  text-align: center;
+  max-width: 50%;
+  max-height: 50%;
 }
 
 </style>
@@ -253,24 +255,24 @@ p{
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO</p>
 <a name="conhecaogrupo"><h1>Conheça o Grupo</h1></a>
-<div class="grupo">
+<div>
   <h3>Bruna Romeiro</h3>
-  <img src="bruna.png">
+  <img src="bruna.png" class="grupo">
 </div> <!-- /.item -->
 
 <div class="grupo">
   <h3>Carlos Antônio</h3>
-  <img src="messi.jpg">
+  <img src="messi.jpg" class="grupo">
 </div> <!-- /.item -->
 
-<div class="grupo">
+<div>
   <h3>Isaque Augusto</h3>
-  <img src="isaque.png">
+  <img src="isaque.png" class="grupo">
 </div> <!-- /.item -->
 
-<div class="grupo">
+<div>
   <h3>Leticcia Medeiros</h3>
-  <img src="leticcia.png">
+  <img src="leticcia.png" class="grupo">
 </div> <!-- /.item -->
 
 </div><!-- .container -->
