atualizacao sla qual

--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@ h3{
                       <li><a href='#tipos'>Tipos de células-tronco</a></li>
                       <li><a href='#aplicacoes'>Principais aplicações das células-tronco na atualidade</a></li>
                     </ul>
-                </div> <!-- /.item -->
-          <li class='dropdown'>
+                </div> 
+          <li>
             <a href='#conhecaogrupo'>CONHEÇA O GRUPO</a>
             <div class='mega-menu'>
               <div class="container">
-            </div><!-- .mega-menu-->
-          </li><!-- .dropdown -->
+            </div>
+          </li>
       </nav>
 
 <a name="inicio"><h1>Objetivo do Projeto</h1></a>
@@ -255,27 +255,27 @@ h3{
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO</p>
 <a name="conhecaogrupo"><h1>Conheça o Grupo</h1></a>
-<div>
+<div class="grupo">
   <h3>Bruna Romeiro</h3>
   <img src="bruna.png" class="grupo">
-</div> <!-- /.item -->
+</div>
 
 <div class="grupo">
   <h3>Carlos Antônio</h3>
-  <img src="messi.jpg" class="grupo">
-</div> <!-- /.item -->
+  <img src="carlos.png" class="grupo">
+</div> 
 
-<div>
+<div class="grupo">
   <h3>Isaque Augusto</h3>
   <img src="isaque.png" class="grupo">
-</div> <!-- /.item -->
+</div> 
 
-<div>
+<div class="grupo">
   <h3>Leticcia Medeiros</h3>
   <img src="leticcia.png" class="grupo">
-</div> <!-- /.item -->
+</div> 
 
-</div><!-- .container -->
+</div>
 <footer class="rodape">
 </footer>
 </body>
