--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@ p{
 h3{
   text-align: center;
 }
+.grupo{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 </style>
 
@@ -248,22 +253,22 @@ h3{
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO</p>
 <a name="conhecaogrupo"><h1>Conheça o Grupo</h1></a>
-<div>
+<div class="grupo">
   <h3>Bruna Romeiro</h3>
   <img src="bruna.png" class="grupo">
 </div>
 
-<div>
+<div class="grupo">
   <h3>Carlos Antônio</h3>
   <img src="carlos.png" class="grupo">
 </div> 
 
-<div>
+<div class="grupo">
   <h3>Isaque Augusto</h3>
   <img src="isaque.png" class="grupo">
 </div> 
 
-<div>
+<div class="grupo">
   <h3>Leticcia Medeiros</h3>
   <img src="leticcia.png" class="grupo">
 </div> 
