--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@ h3{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 50%;
+  max-height: 50%;
 }
 
 </style>
@@ -253,22 +255,22 @@ h3{
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO</p>
 <a name="conhecaogrupo"><h1>Conheça o Grupo</h1></a>
-<div class="grupo">
+<div>
   <h3>Bruna Romeiro</h3>
   <img src="bruna.png" class="grupo">
 </div>
 
-<div class="grupo">
+<div>
   <h3>Carlos Antônio</h3>
   <img src="carlos.png" class="grupo">
 </div> 
 
-<div class="grupo">
+<div>
   <h3>Isaque Augusto</h3>
   <img src="isaque.png" class="grupo">
 </div> 
 
-<div class="grupo">
+<div>
   <h3>Leticcia Medeiros</h3>
   <img src="leticcia.png" class="grupo">
 </div> 
