atualizacao sla qual

--- a/index.html
+++ b/index.html
@@ -253,7 +253,21 @@ h3{
   <img src="tiposcelulastronco.jpg" class="imagem">
 </p>
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
-<p>TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO</p>
+<p>As células-tronco são a grande esperança para, em um futuro não muito distante, se ter novos recursos e técnicas no tratamento de doenças,
+  que hoje são enigmas da medicina. Hoje, processos lentos como transplantes de órgãos, podem ser facilitados com a utilização das 
+  células-tronco, que, de modo menos invasivo, podem restaurar o órgão ou tecido debilitado, de maneira eficiente, garantindo mais chances de 
+  cura ao paciente. Médicos, também já veem essas possibilidades como área promissora, dentro das diversas especializações da medicina. </p>
+<p>O estudo das células-tronco pode ajudar a explicar como surgem doenças graves, como defeitos congênitos e câncer. No futuro, elas poderão 
+  ser usadas para fazer células e tecidos para a terapia de muitas doenças, como Parkinson, Alzheimer, lesão da medula espinhal, doenças 
+  cardíacas, diabetes e artrite.</p>
+<p>Existe um enorme potencial das pesquisas com células tronco ampliarem a capacidade de reparação intrínseca do ser humano pela regeneração 
+  de órgãos, tecidos ou membros do corpo feridos ou doentes.</p>
+<p>O uso da terapia celular tem tido relevante expressão no tratamento cardiovascular, especialmente na doença arterial coronariana.</p>
+<p>Recentemente descobriu-se que as células-tronco também são encontradas no Sistema Nervoso Central (SNC) e isto reavivou a esperança que até 
+  então tinha sido negada de que há possiblidade de regeneração neuronal a partir da existência destas células.</p>
+<p>Os estudos ainda estão em uma evolução contínua, mas já se pode observar resultados positivos, demonstrando ser um campo promissor para a 
+  medicina. Todavia, algumas pesquisas ainda revelam que existem limitações a serem superadas, como o controle da indiferenciação ou até mesmo 
+  de uma resposta imune negativa do receptor.</p>
 <a name="conhecaogrupo"><h1>Conheça o Grupo</h1></a>
 <div>
   <h3>Bruna Romeiro</h3>
