--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@ h3{
   max-width: 50%;
   max-height: 50%;
 }
+#video{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 </style>
 
@@ -251,6 +256,8 @@ h3{
        geralmente são utilizadas células da pele.</p>
   </ol>
   <img src="tiposcelulastronco.jpg" class="imagem">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/kkYluBgt-hc" title="YouTube video player" frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
 </p>
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>As células-tronco são a grande esperança para, em um futuro não muito distante, se ter novos recursos e técnicas no tratamento de doenças,
@@ -260,9 +267,8 @@ h3{
 <p>O estudo das células-tronco pode ajudar a explicar como surgem doenças graves, como defeitos congênitos e câncer. No futuro, elas poderão 
   ser usadas para fazer células e tecidos para a terapia de muitas doenças, como Parkinson, Alzheimer, lesão da medula espinhal, doenças 
   cardíacas, diabetes e artrite.</p>
-<p>Existe um enorme potencial das pesquisas com células tronco ampliarem a capacidade de reparação intrínseca do ser humano pela regeneração 
+<p>Existe um enorme potencial das pesquisas com células-tronco ampliarem a capacidade de reparação intrínseca do ser humano pela regeneração 
   de órgãos, tecidos ou membros do corpo feridos ou doentes.</p>
-<p>O uso da terapia celular tem tido relevante expressão no tratamento cardiovascular, especialmente na doença arterial coronariana.</p>
 <p>Recentemente descobriu-se que as células-tronco também são encontradas no Sistema Nervoso Central (SNC) e isto reavivou a esperança que até 
   então tinha sido negada de que há possiblidade de regeneração neuronal a partir da existência destas células.</p>
 <p>Os estudos ainda estão em uma evolução contínua, mas já se pode observar resultados positivos, demonstrando ser um campo promissor para a 
