--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@ h3{
   produzem outras células progenitoras similares. Ao contrário, as células resultantes da divisão adquirem uma morfologia e fisiologia próprias,
   especializando-se no desempenho de uma tarefa específica no organismo (células diferenciadas).</p>
   <img src="classificacaocelulastronco.jpg" class="imagem">
+  <p></p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/6sObRB9d8mw" title="YouTube video player" frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
 <a name="tipos"><h1>Tipos de Células-Tronco</h1></a>
 <p>
   <ol>
@@ -256,6 +259,7 @@ h3{
        geralmente são utilizadas células da pele.</p>
   </ol>
   <img src="tiposcelulastronco.jpg" class="imagem">
+  <p></p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/kkYluBgt-hc" title="YouTube video player" frameborder="0" 
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
 </p>
