--- a/index.html
+++ b/index.html
@@ -159,11 +159,6 @@ h3{
   max-width: 50%;
   max-height: 50%;
 }
-#video{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 </style>
 
@@ -231,7 +226,7 @@ h3{
   <img src="classificacaocelulastronco.jpg" class="imagem">
   <p></p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/6sObRB9d8mw" title="YouTube video player" frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="imagem"></iframe>
 <a name="tipos"><h1>Tipos de Células-Tronco</h1></a>
 <p>
   <ol>
@@ -261,7 +256,7 @@ h3{
   <img src="tiposcelulastronco.jpg" class="imagem">
   <p></p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/kkYluBgt-hc" title="YouTube video player" frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="imagem"></iframe>
 </p>
 <a name="aplicacoes"><h1>Principais Aplicações das Células-Tronco na Atualidade</h1></a>
 <p>As células-tronco são a grande esperança para, em um futuro não muito distante, se ter novos recursos e técnicas no tratamento de doenças,
