--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@ h3{
   formação de tecidos e órgãos. Ao longo da vida adulta do organismo, as poucas células-tronco que restam estão relacionadas com a renovação 
   celular.</p>
 <img src="oquesaocelulastronco.png" class="imagem">
+<iframe width="500" height="255" src="https://www.youtube.com/embed/AT33Fvvwc90" title="YouTube video player" frameborder="0" allow=
+"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="imagem"></iframe>
 <a name="classificacao"><h1>Classificação das Células-Tronco</h1></a>
 <p>Já dissemos que a célula-tronco por excelência é o zigoto, porque ela é uma célula totipotente, isto é, capaz de formar tanto o embrião 
   (e, portanto, todo o organismo adulto) como também uma estrutura extraembrionária, a placenta.  O processo de clivagem (ou segmentação) do 
