--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
-    <title>painel</title>
+    <title>Células-Tronco</title>
 </head>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@300&display=swap');
@@ -172,12 +172,11 @@ h3{
             <div class='mega-menu'>
               <div class="container">
                 <div class="item">
-                    <h3>Conheça mais sobre células-tronco abaixo:</h3>
                     <ul>
                       <li><a href='#oquesao'>O que são células-tronco?</a></li>
                       <li><a href='#classificacao'>Classificação das células-tronco</a></li>
                       <li><a href='#tipos'>Tipos de células-tronco</a></li>
-                      <li><a href='#aplicacoes'>Principais aplicações das células-tronco na atualidade</a></li>
+                      <li><a href='#aplicacoes'>Principais aplicações</a></li>
                     </ul>
                 </div> 
           <li>
@@ -193,6 +192,7 @@ h3{
   replicação, podendo se dividir várias vezes, característica não encontrada nas outras células de um organismo. Dessa forma, a partir 
   das divisões ocorre a chamada diferenciação celular, processo que tem como objetivo gerar as células especializadas que se conhece, 
   como neurônios, células musculares, leucócitos e hemácias.</p>
+  <img src="biomaket.jpeg" class="imagem" width="260" height="340">
 <a name="oquesao"><h1>O que são Células-Tronco?</h1></a>
 <p>Todas as células são resultantes da fecundação de um óvulo por um espermatozóide, a chamada célula ovo ou zigoto. Portanto para haver a 
   diferenciação celular o zigoto deve conter, em suas instruções genéticas, todas as informações necessárias à formação de todas essas células. 
@@ -207,6 +207,7 @@ h3{
   formação de tecidos e órgãos. Ao longo da vida adulta do organismo, as poucas células-tronco que restam estão relacionadas com a renovação 
   celular.</p>
 <img src="oquesaocelulastronco.png" class="imagem">
+<p></p>
 <iframe width="500" height="255" src="https://www.youtube.com/embed/AT33Fvvwc90" title="YouTube video player" frameborder="0" allow=
 "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="imagem"></iframe>
 <a name="classificacao"><h1>Classificação das Células-Tronco</h1></a>
@@ -275,6 +276,10 @@ h3{
 <p>Os estudos ainda estão em uma evolução contínua, mas já se pode observar resultados positivos, demonstrando ser um campo promissor para a 
   medicina. Todavia, algumas pesquisas ainda revelam que existem limitações a serem superadas, como o controle da indiferenciação ou até mesmo 
   de uma resposta imune negativa do receptor.</p>
+  <img src="aplicacao.jpeg" class="imagem">
+  <p></p>
+  <iframe width="500" height="255" src="https://www.youtube.com/embed/dfhG5MijmVE" title="YouTube video player" frameborder="0" allow="accelerometer; 
+  autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="imagem"></iframe>
 <a name="conhecaogrupo"><h1>Conheça o Grupo</h1></a>
 <div>
   <h3>Bruna Romeiro</h3>
